translate(x,y) вместо скролинга

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         <input type="number" id="grid-size" value="100" min="10" max="200">
         <label for="speed">Скорость (мс):</label>
         <input type="number" id="speed" value="100" min="10" max="1000">
+        <br>
+        <span>Перемещать поле на колёсико мыши</span>
     </div>
     <div id="grid-container">
         <div id="grid"></div>
     </div>
     <script src="game-of-life-core.js"></script>
     <script src="game-of-life.js"></script>
+    <script src="grid-move.js"></script>
 </body>
 </html>
